gateway/allow-gateway.yaml
# oc apply -f allow-gateway.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-gateway-to-service
spec:
  podSelector:
    matchLabels:
      app: metabase
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: dev
              name: 264e6f
    - from:
        - namespaceSelector:
            matchLabels:
              environment: test
              name: 264e6f
    - from:
        - namespaceSelector:
            matchLabels:
              environment: prod
              name: 264e6f
  policyTypes:
    - Ingress
